# dumpster-fire-driven-development

./: .aider.conf.yml  .clinerules  .commitlintrc.js  .cursorrules  .editorconfig  .eslintrc.js  .gitlab-ci.yml  .lintstagedrc  .markdownlint.yaml  .prettierrc  .stylelintrc.json  .travis.yml  .yamllint  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Gemfile  Jenkinsfile  LICENSE.md  Makefile  README.md  SECURITY.md  azure-pipelines.yml  biome.json  bun.lockb  composer.json  go.mod  go.sum  gruntfile.js  kubernetes-deployment.yaml  package-lock.json  pom.xml  pyproject.toml  renovate.json  requirements.txt  rollup.config.js  scc-aggregate-results.txt  terraform.tf  (+3 more)
.circleci/: config.yml
.github/: CODEOWNERS
.husky/: pre-commit
.windsurf/: instructions.md
app/: index.html  script.js  (+1 more)
the-metrix/team-analytics-app/: .env.example  .gitignore  Dockerfile  README.md  SPRINT_ANALYTICS_NOTES.md  pyproject.toml  requirements.txt
the-metrix/team-analytics-app/src/: api_client.py  config.py  jira_client.py  main.py  sprint_utils.py
the-metrix/team-analytics-app/src/static/css/: components.css
the-metrix/team-analytics-app/src/static/js/: feedback-widget.js  splash.js
the-metrix/team-analytics-app/src/static/js/components/: skeleton-loader.js
the-metrix/team-analytics-app/src/templates/: base_layout.html  dora.html  feedback_admin.html  insights.html  metrics.html  opencode.html  settings.html  sprint.html  sprint_content.html  sprint_skeleton.html  survey.html
the-metrix/team-analytics-app/src/templates/test/: components.html  loading.html
(+11427 files in other folders)
