[project]
name = "team-analytics-app"
version = "0.1.0"
description = "Team productivity dashboard for sprint metrics and velocity analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "httpx>=0.27.0",
]
